<resources>
    <string name="app_name">Health Keep</string>
    <string name="health_keep" translatable="false">Health Keep</string>
    <string name="reminder">Your personal health reminder</string>
    <string name="appointment_tracker">Appointment Tracker</string>
    <string name="remember">We help you remember</string>
    <string name="doctor_chat">Doctor Chat</string>
    <string name="doctors">Keep in touch with your Doctors</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_username">Username</string>
    <string name="nav_header_email_address">Email Address</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="sign_up_activity_title">Sign up</string>
    <string name="signup_loading_text">Signing in…</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_in_text">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="signin_activity_title">Sign in</string>
    <string name="forgot_password_prompt">Forgot password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="appointments">Appointments</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="chat">Chat</string>
    <string name="personal">Personal</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="title_activity_patient_appointments">My Appointments</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="title_activity_patient_prescriptions">My Prescriptions</string>
    <string name="title_activity_patient_account">My Account</string>
    <string name="title_activity_doctor_nav">Doctor\'s Dashboard</string>
    <string name="patients">Patients</string>
    <string name="join">Join</string>
    <string name="login">Login</string>
    <string name="edit">Edit</string>
    <string name="app_logo" translatable="false">App logo</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="dashboard">Dashboard</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="delete">delete</string>

    <!--On-boarding slide adapter strings-->
    <string name="welcome">Welcome to Health Keep</string>
    <string name="tracker">Appointment Tracker</string>
    <string name="drchat">Doctor Chat</string>
    <string name="desc1">Your personal health reminder</string>
    <string name="desc2">Never miss a doctor\'s appointmen</string>
    <string name="desc3">Keep in touch with your doctors</string>

    <string-array name="slide_headings">
        <item>@string/welcome</item>
        <item>@string/tracker</item>
        <item>@string/drchat</item>
    </string-array>
    <string-array name="slide_descriptions">
        <item>@string/desc1</item>
        <item>@string/desc2</item>
        <item>@string/desc3</item>
    </string-array>

    <string name="internet_connection_error">No internet connection</string>

    <!--Sign up related strings-->
    <string name="signup_email_error">Invalid email provided</string>
    <string name="signup_password_error">At least 8 characters and one digit</string>
    <string name="signup_client_type_error">Choose one</string>

    <string name="signup_success">A verification link has been sent to your email. Verify your account to login.</string>
    <string name="general_error">Oops! Something ain\'t right. Try again later </string>

    <string name="required_field_error">Required field</string>
    <string name="login_invalid_credentials">Invalid credentials</string>
    <string name="error_occurred">An error occurred</string>
    <string name="connection_timeout_error">Connection timeout. Try again</string>
    <string name="personal_details_card_title">Personal Details</string>
    <string name="edit_option">edit</string>
    <string name="cancel_option">@android:string/cancel</string>
    <string name="save_option">save</string>
    <string name="username_hint_allcaps">USERNAME</string>
    <string name="email_hint_allcaps">EMAIL</string>
    <string name="change_password_card_title">reset password</string>
    <string name="reset_password_option">reset</string>
    <string name="account_old_password_hint">Old password</string>
    <string name="account_new_password_hint">New password</string>
    <string name="account_update_progress_title">ACCOUNT UPDATING</string>
    <string name="please_wait_msg">Please wait…</string>
    <string name="account_updated">Account updated successfully</string>
    <string name="account_update_password_progress_title">PASSWORD UPDATING</string>
    <string name="password_updated_success">Account password updated</string>
    <string name="dosage">Dosage</string>
    <string name="medicine">Medicine</string>
    <string name="history">History</string>
    <string name="empty_appointments_description">empty appointments</string>
    <string name="empty_appointments_string" translatable="false">Create new appointments by clicking the button at the bottom right corner</string>
    <string name="empty_appointments_history_image_description">Empty history appointments</string>
    <string name="empty_appointments_history_string">No past appointments yet</string>
    <string name="add_appointments">Add Appointment</string>
    <string name="add_appointment_title">Title</string>
    <string name="add_appointment_description">Description</string>
    <string name="add_appointment_location">Location</string>
    <string name="add_appointment_date">Date</string>
    <string name="add_appointment_time">Time</string>
    <string name="str_reminder">Reminder</string>
    <string name="repeat">Repeat</string>
    <string name="add_appointment_start_date">Start Date</string>
    <string name="add_appointment_frequency">Frequency</string>
    <string name="appointment">Appointment</string>

    <!-- all -->
    <string name="all_app_version" translatable="false">Health Keep v%1$s / SDK v%2$s</string>
    <string name="app_details" translatable="false">Health Keep v1 / SDK v3.0.97</string>

    <string name="all_create">Create</string>
    <string name="all_invite">Invite</string>

    <!-- main -->
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>
    <string name="select_channel_type">Select channel type</string>
    <string name="settings">Settings</string>
    <string name="blocked_members_list">Blocked members</string>

    <!-- login -->
    <string name="login_user_id">User ID</string>
    <string name="login_user_nickname">Username</string>
    <string name="login_connect">Connect</string>
    <string name="login_disconnect">Disconnect</string>

    <!-- Group Channel List -->
    <string name="group_channel_list_file_message_text" translatable="false">%1$s has uploaded a file.</string>

    <string name="create_group_channel">Create New Chat</string>
    <string name="member_list">Members</string>
    <string name="invite_member">Invite members</string>

    <!-- Content descriptions -->
    <string name="open_channel_chat_content_desc_profile">Profile image</string>

    <!-- Menu actions -->

    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="resend_message">Resend</string>
    <string name="delete_message">Delete</string>

    <!-- Message Status -->
    <string name="message_sending">Sending</string>
    <string name="message_failed">Failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="all_group_channels">All Chats</string>
    <string name="connect_chat">Open Chat Module </string>
    <string name="nav_header_subtitle" translatable="false">header_sub</string>

</resources>