<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_appointments"
            android:title="@string/appointments" />
        <item
            android:id="@+id/nav_prescriptions"
            android:icon="@drawable/ic_prescriptions"
            android:title="@string/prescriptions" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_email"
            android:title="@string/chat" />
    </group>

    <item android:title="@string/personal">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_person"
                android:title="@string/account" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
