<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.patients.PatientNav">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="7dp"
                android:textSize="20sp"
                android:text="@string/time"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:paddingStart="5dp" />

            <TextView
                android:id="@+id/medicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="3dp"
                android:textSize="15sp"
                android:text="@string/medicine"
                android:layout_below="@+id/hour"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:paddingStart="5dp" />

            <TextView
                android:id="@+id/dosage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/medicine"
                android:layout_alignParentRight="true"
                android:paddingRight="15dp"
                android:text="@string/dosage"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>